# FastApi-study

./: api.py  model.py  pyproject.toml  requirements.txt  todo.py
planner/: main.py  planner.db
planner/database/: connection.py
planner/models/: events.py  users.py
planner/routes/: events.py  users.py
templates/: home.html
todo/: model.py  todo.py
todo/templates/: todo.html
